[package]
name = "ws2812b_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", default-features = false }
embedded-hal = "0.2"
nb = "1"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

rtt-target = '0.4.0'
panic-probe = "0.3.1"

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f411"]