[package]
name = "ws2812b-driver"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.71", default-features = false }
#embedded-hal = "0.2.7"
#embedded-dma = "0.2.0"
nb = "1"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

panic-probe = "0.3.1"

smart-leds-trait = "0.2.1"
pwm-dma = { path = "pwm-dma" }

[dependencies.stm32f4xx-hal]
version = "0.15.0"
features = ["stm32f411"]
